Prevent mobile menu buttons from overflowing

--- a/frontend-web/src/components/Menu/Menu.scss
+++ b/frontend-web/src/components/Menu/Menu.scss
@@ -18,7 +18,8 @@ nav {
   display: flex;
   flex-direction: row;
   align-items: center;
-  justify-content: flex-start;
+  justify-content: center;
+  flex-wrap: wrap;
   gap: 1rem;
 
   & > button {
